--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciador de Tarefas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
 
-    <header class="bg-dark text-white text-center p-3 mb-4">
-        <h1>Minha Agenda de Tarefas</h1>
-    </header>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-primary bg-primary bg-gradient mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center text-white fs-1 fw-bold" href="#">
+                <img src="assets/img/logo_pucrio.jpg" alt="Logo" width="80" height="80"
+                    class="d-inline-block align-text-top me-2">
+                Minha Agenda de Tarefas
+            </a>
+        </div>
+    </nav>
 
     <main class="container">
         <section class="card mb-4 shadow-sm">
@@ -33,21 +40,21 @@
 
         <section class="row" id="tasks-container">
             <div class="col-md-4">
-                <div class="column-header">
+                <div class="column-header bg-info">
                     <h3>A Fazer</h3>
                 </div>
                 <div id="todo-column" class="task-column">
                     </div>
             </div>
             <div class="col-md-4">
-                <div class="column-header">
+                <div class="column-header bg-info">
                     <h3>Em Andamento</h3>
                 </div>
                 <div id="doing-column" class="task-column">
                     </div>
             </div>
             <div class="col-md-4">
-                <div class="column-header">
+                <div class="column-header bg-info">
                     <h3>Concluído</h3>
                 </div>
                 <div id="done-column" class="task-column">
@@ -55,7 +62,32 @@
             </div>
         </section>
     </main>
-    
-    <script src="script.js"></script>
+
+    <footer class="bg-primary bg-gradient text-white text-center p-3 mt-4">
+        <p class="mb-0">&copy; Desenvolvido por Jackson Costa | Pós-graduando em Engenharia de Software - PUC RIO</p>
+    </footer>
+
+    <!-- Modal de Confirmação -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="deleteModalLabel">Confirmar Exclusão</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+          </div>
+          <div class="modal-body">
+            Tem certeza que deseja excluir esta tarefa?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+            <button type="button" class="btn btn-danger" id="confirmDeleteBtn">Excluir</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
+
 </html>
